# martebursdag

./: CLAUDE.md  CMakeLists.txt  CMakePresets.json  vcpkg.json
data/: test_movesv2.txt  test_pokemonv1.txt
include/battle/: DamageCalc.h  Simulator.h  StatusDamage.h
include/misc/: Status.h  Type.h
include/move/: Category_moves.h  Move.h  Move_display.h  Move_loader.h  Special_effect.h  Stat_change.h
include/pokemon/: Pokemon.h  Pokemon_loader.h  Stats.h
include/typechart/: TypeChart.h
src/: main.cpp
src/battle/: DamageCalc.cpp  Simulator.cpp  StatusDamage.cpp
src/move/: Move.cpp  Move_display.cpp  Move_loader.cpp  Protect.cpp
src/pokemon/: Pokemon.cpp  Pokemon_loader.cpp  Stats.cpp
src/typechart/: TypeChart.cpp
